---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from invoices\nselect { customer_id, invoice_id, total, useless1, useless2 }\ntake 5\nappend (\n  from employees\n  select { employee_id, employee_id + 1, reports_to, useless3, useless4 }\n  take 5\n)\ngroup { customer_id } (aggregate { invoice_id = math.round 1 (sum invoice_id), total = math.round 1 (sum total), useless1 = sum useless1 })\nappend (\n  from invoice_items\n  select { invoice_id, invoice_line_id, 0, useless5 }\n  take 5\n)\nsort { +invoice_id, +total }\nselect { total, invoice_id }\n\n# sqlite:skip\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_multiple.prql
---
from invoices
select {customer_id, invoice_id, total, useless1, useless2}
take 5
append (
  from employees
  select {employee_id, employee_id + 1, reports_to, useless3, useless4}
  take 5
)
group {customer_id} (aggregate {
  invoice_id = math.round 1 (sum invoice_id),
  total = math.round 1 (sum total),
  useless1 = sum useless1,
})
append (
  from invoice_items
  select {invoice_id, invoice_line_id, 0, useless5}
  take 5
)
sort {+invoice_id, +total}
select {total, invoice_id}
